# golangCgoTest

./: README.md
codeCompiler/: CMakeLists.txt  elf  elf.go  elf_section.c  elf_section.h  go.mod
linkDynamicLib/: elf.go  go.mod
linkStaticLib/: elf.go  elf_section.h  go.mod
